k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cafe-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cafe-ui
  template:
    metadata:
      labels:
        app: cafe-ui
    spec:
containers:
  - name: cafe-ui
    image: premrepal/cafe-ui:30
    imagePullPolicy: Always
    ports:
      - containerPort: 80
    resources:
      requests:
        cpu: "100m"
      limits:
        cpu: "200m"
