k8s-manifests/service.yaml
<<<<<<< HEAD
apiVersion: v1
kind: Service
metadata:
  name: cafe-ui-service
spec:
  type: NodePort
  selector:
    app: cafe-ui
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30007
